sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Thu May 07 08:44:34 2009


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=165 varID=255 objID=dummy
.. Answered with error to command (165), [description: Unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
